# whatslab-sdk

./: .gitignore  LICENSE  MANIFEST.in  README.ko.md  README.md  pyproject.toml
assets/quest/: README.md
docs/: API.md
examples/: airglove_hand.py  quest_arm.py  verify_rig.py
scripts/: install_quest_app.sh
src/whatslab/: paths.py  safety.py
src/whatslab/configs/rigs/: nero_arm.yaml  nero_orca_right.yaml
src/whatslab/configs/robots/: nero.yaml  orca_right.yaml
src/whatslab/core/: __init__.py  interfaces.py  types.py
src/whatslab/data/: __init__.py  lerobot_recorder.py  lerobot_schema.py
src/whatslab/model/: __init__.py  base.py  calibration.py  glove.py  hand.py  ik.py  quest.py
src/whatslab/receiver/: __init__.py  base.py  glove_base.py  glove_human_hand.py  glove_robot_hand.py  osc_transport.py  quest_base.py  quest_controller.py  quest_hand.py
src/whatslab/robot/: __init__.py  config.py  model.py
src/whatslab/teleop/: __init__.py
src/whatslab/teleop/arm/: __init__.py  arm_ik.py  builders.py
src/whatslab/teleop/core/: __init__.py  constants.py
src/whatslab/teleop/hand/: __init__.py  controller.py  retargeter.py  spherical_fk.py
src/whatslab/teleop/hand/hand_configs/: __init__.py  _base.py  ability_hand.py  allegro_hand.py  base_hand.py  orca_hand.py  robotis_hx5_d20.py  schunk_svh.py  tesollo_dg5f.py
src/whatslab/viz/: __init__.py  scene.py
tests/: conftest.py  test_arm.py  test_core.py  test_export_targets.py  test_glove_receiver.py  test_hand.py  test_lerobot_recorder.py  test_model_glove.py  test_osc_transport.py  test_quest_receiver.py  test_robot.py  test_safety.py  test_viz.py
tests/fixtures/lerobot_ref_v21/data/chunk-000/: episode_000000.parquet  episode_000001.parquet
tests/fixtures/lerobot_ref_v21/meta/: episodes.jsonl  episodes_stats.jsonl  info.json  tasks.jsonl
tools/: align_frames.py  export_combined_urdf.py  export_combined_usd.py  export_targets.py
